adding jquery easing plugin

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
     </section>
   </div> 
   <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <script type="text/javascript" src="js/modernizr.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/scrolling-nav.js"></script>
