added another scrolling image

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
         </div>
     </section>
 
+    <!-- Picture Section -->
+    <section id="picture" class="picture-section" >
+        <!-- div to hold scrolling picture-->
+        <div class="picture pictureOne"></div>
+    </section>
+
     <!-- Services Section -->
     <section id="services" class="services-section portfolio" >
         <div class="container">
@@ -173,7 +179,7 @@
     <!-- Picture Section -->
     <section id="picture" class="picture-section" >
         <!-- div to hold scrolling picture-->
-        <div class="picture"></div>
+        <div class="picture pictureTwo"></div>
     </section>
 
 
