fixed spelling error

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                       <div class="panel-body">
                         <h3>University of Lousiville</h3>
                         <p>I'm currently a Senior, majoring in Computer Information Systems and concentrating in Web Development.</p>
-                        <p>Gaduation Date: Summer 2015</p>
+                        <p>Graduation Date: Summer 2015</p>
                         <p>Core GPA: 3.6</p>
                       </div>
                     </section>
