adding blog promo

--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
         <!-- /.container -->
     </nav>
 
+    <!-- Blog Promo -->
+    <section id="blogPromo">
+        <div class="blogPromoWrapper">
+            <div class="blogPromoContainer">
+                <div class="promoHeader">
+                    <h1 class="text-center">Checkout my Blog</h1>
+                </div>
+                <div class="promoBody">
+                    <p>Learn how to build a website from scratch!</p>
+                    <div class="promoLinks"><a class="btn btn-default" href="/angular-blog/#/blog">Go Now</a><span class="closePromo">Maybe Later</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
         <div class="container">
