--- a/index.html
+++ b/index.html
@@ -462,5 +462,6 @@
   <script type="text/javascript" src="js/share.js"></script>
   <script type="text/javascript" src="js/slider.js"></script>
   <script type="text/javascript" src="js/skills.js"></script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53f56303144fe2bd" async="async"></script>
 </body>
 </html>
